feat: implement public combined compatibility api
